//Front-end: Improving the profile page responsiveness
/* Improving the responsiveness, it is necessary to think about an alternative menu and put the option delete ONG registration */

--- a/frontend/src/pages/Profile/styles.css
+++ b/frontend/src/pages/Profile/styles.css
@@ -8,6 +8,20 @@
 .profile-container header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.profile-container header div:nth-child(1) {
+  display: flex;
+  align-items: center;
+}
+
+
+.profile-container .menuOptions {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .profile-container header span {
@@ -37,6 +51,10 @@
 
 .profile-container header button:hover {
   border-color: #999;
+}
+
+.profile-container .menuOptions .menuIcon {
+  display: none;
 }
 
 .profile-container h1 {
@@ -85,4 +103,59 @@
   color: #737380;
   line-height: 21px;
   font-size: 16px;
+}
+
+@media (max-width: 767.98px) {
+  /*.profile-container .menuOptions .menuIcon {
+    display: block;
+    position: absolute;
+    right: 30px;
+  }*/
+  .profile-container ul {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 620px) {
+  .profile-container header {
+    flex-wrap: wrap;
+  }
+  .profile-container header span {
+    margin-left: 5px;
+  }
+  .profile-container .menuOptions {
+    width: 100%;
+  }
+  .profile-container header .button {
+    margin: 10px 0 10px auto;
+  }
+  .profile-container h1 {
+    margin-top: 20px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 420px) {
+  .profile-container {
+    padding: 0 10px;
+  }
+  .profile-container header span {
+    margin-left: 10px;
+    font-size: 16px;
+  }
+  .profile-container header a{
+  width: 70%;
+  min-width: 160px;
+  font-size: 16px;
+  }
+  .profile-container .button {
+    height: 50px;
+    line-height: 50px;
+    overflow: hidden;
+  }
+  .profile-container header button {
+    height: 50px;
+    width: 50px;
+  }
+
 }
