--- a/src/global.css
+++ b/src/global.css
@@ -41,7 +41,20 @@ form textarea {
   padding: 16px 24px;
   line-height: 24px;
 }
-
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: #E02041; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #CA1D3A; 
+}
 .button {
   width: 100%;
   height: 60px;
